Updated responsiveness of new edit user account features.

--- a/code/frontend/src/styles/AdminPage.module.css
+++ b/code/frontend/src/styles/AdminPage.module.css
@@ -175,3 +175,18 @@
     text-shadow: 3px 3px darkgreen;
   }
 }
+
+
+@media (max-width:350px) {
+  .results_container {
+    width: 300px;
+  }
+  
+  .button_box {
+    width: 280px;
+  }
+
+  .button_box > * {
+    width: 130px;
+  }
+}
