--- a/code/frontend/src/styles/UserPage.module.css
+++ b/code/frontend/src/styles/UserPage.module.css
@@ -1,6 +1,6 @@
 .wrapper {
     display: flex;
-    width: 100%;
+    width: 100vw;
     flex-direction: column;
     align-items: center;
     padding: 0px;
@@ -55,6 +55,7 @@
   font-weight: 800;
   cursor: pointer;
   color: whitesmoke;
+  margin-right: 26px;
 }
 
 .user_page_button:hover {
@@ -116,6 +117,16 @@
   color: whitesmoke;
   text-shadow: 2px 2px grey;
   font-size: var(--medium);
+}
+
+@media (max-width:1400px) {
+  .wrapper {
+    width: 100%;
+  }
+
+  .user_page_button {
+    margin-right: 0;
+  }
 }
 
 @media (max-width:1000px) {
