--- a/code/frontend/src/styles/HomeView.module.css
+++ b/code/frontend/src/styles/HomeView.module.css
@@ -5,40 +5,32 @@
   }
 
 .banner_box {
-  height: 17rem;
-  display: flex;
-  margin-bottom: -2rem;
+  margin-top: 70px;
+  margin-bottom: 30px;
+  width: 100vw;
 }
 
 .banner_text {
-  align-self: center;
   text-align: center;
-  font-size: 100px;
+  font-size: var(--xx-large);
   text-shadow: 5px 5px darkgreen;
   cursor: pointer;
 }
 
 .login_button, .signup_button {
-  width: 20rem;
-  height: 5rem;
-  border-radius: 20px;
-  font-size: 30px;
+  width: 300px;
+  height: 75px;
+  border-radius: 10px;
+  font-size: var(--medium);
   font-weight: bolder;
-  background-color: rgb(100, 100, 100);
-  border-color: silver;
-  margin-bottom: 1.5rem;
+  border: solid 1px whitesmoke;
+  margin-bottom: 1rem;
   cursor: pointer;
-  color: green;
+  transition: .3s;
 }
 
 .login_button:hover, .signup_button:hover {
-  width: 21rem;
-  height: 5.5rem;
-  margin-bottom: 1.25rem;
-  margin-top: -.25rem;
-  background-color: rgb(110,110,110);
-  font-size: 35px;
-  box-shadow: 2px 2px 2px rgb(200,200,200);
+  background-color: rgb(50,50,50) !important;
 }
 
 .account_recovery_links {
@@ -50,7 +42,7 @@
 .account_recovery_links > *{
   background-color: rgb(0,0,0,0);
   border: none;
-  font-size: 16px;
+  font-size: var(--small);
   color: grey;
 }
 
@@ -59,32 +51,20 @@
   cursor: pointer;
 }
 
-@media (max-width:993px) {
+@media (max-width:800px) {
   .banner_text {
-    font-size: 80px;
+    font-size: var(--x-large);
   }
 }
 
-@media (max-width:770px) {
+@media (max-width:500px) {
   .banner_text {
-    font-size: 85px;
+    font-size: var(--large);
+    text-shadow: 3px 3px darkgreen;
+    margin-bottom: 0;
   }
-}
 
-@media (max-width:550px) {
-  .banner_text {
-    font-size: 60px;
-  }
-}
-
-@media (max-width:460px) {
-  .banner_text {
-    font-size: 70px;
-  }
-}
-
-@media (max-width:350px) {
-  .banner_text {
-    font-size: 65px;
+  .login_button, .signup_button {
+    width: 280px;
   }
 }
