--- a/code/frontend/src/styles/LoginModal.module.css
+++ b/code/frontend/src/styles/LoginModal.module.css
@@ -40,7 +40,7 @@
   width: 300px;
   border: none;
   border-radius: 10px;
-  border: solid 1px steelblue;
+  border: solid 1px whitesmoke;
 }
 
 .input_account_info_box::placeholder {
@@ -50,12 +50,14 @@
 }
 
 .input_account_info_box:focus {
-  background-color: rgb(35,35,35) !important;
+  background-color: rgb(50,50,50) !important;
   box-shadow: none;
+  border: solid 1px white;
 }
 
 .input_account_info_box:hover {
-  background-color: rgb(35,35,35) !important;
+  background-color: rgb(50,50,50) !important;
+  border: solid 1px white;
 }
 
 .input_account_info_box:active {
@@ -74,22 +76,24 @@
 .button_box > * {
   width: 140px;
   height: 45px;
-  border-radius: 2px;
-  background-color: steelblue!important;
-  border: none;
+  border-radius: 10px;
+  background-color: var(--charcoal)!important;
+  border: solid 1px whitesmoke;
   font-size: var(--small);
   font-weight: 800;
-  color: whitesmoke;
+  color: var(--electric-green);
 }
 
 .button_box > :hover {
-  background-color: rgba(70, 131, 180, 0.5) !important;
-  color: rgba(245, 245, 245, 0.5) !important;
+  background-color: rgb(50,50,50) !important;
+  border: solid 1px white;
+  color: white;
 }
 
 .button_box > :active {
-  background-color: rgba(70, 131, 180, 0.5) !important;
-  color: rgba(245, 245, 245, 0.5) !important;
+  background-color: rgb(50,50,50) !important;
+  border: solid 1px white;
+  color: white;
 }
 
 .login_error {
@@ -116,34 +120,15 @@
   background-color: rgb(0,0,0,0);
 }
 
-@media (max-width:770px) {
+@media (max-width:800px) {
   .banner_text {
-    font-size: 90px;
-  }
-}
-
-@media (max-width:650px) {
-  .banner_text {
-    font-size: 80px;
-  }
-}
-
-@media (max-width:575px) {
-  .banner_text {
-    font-size: 70px;
-    text-shadow: 4px 4px darkgreen;
+    font-size: var(--x-large);
   }
 }
 
 @media (max-width:500px) {
   .banner_text {
-    font-size: 60px;
-  }
-}
-
-@media (max-width:430px) {
-  .banner_text {
-    font-size: 50px;
+    font-size: var(--large);
     text-shadow: 3px 3px darkgreen;
   }
 }
@@ -158,18 +143,7 @@
     margin-bottom: 10px;
   }
 
-  .banner_text {
-    font-size: 40px;
-    margin-top: 125px;
-  }
-
   .button_box { 
     width: 18rem;
-  }
-}
-
-@media (max-width:330px) {
-  .banner_text {
-      font-size: 40px;
   }
 }
