--- a/code/frontend/src/styles/UserPage.module.css
+++ b/code/frontend/src/styles/UserPage.module.css
@@ -1,3 +1,9 @@
+label {
+  color: whitesmoke;
+  text-shadow: 2px 2px grey;
+  font-size: var(--medium);
+}
+
 .wrapper {
     display: flex;
     width: 100vw;
@@ -21,6 +27,7 @@
   font-size: var(--large);
   text-shadow: 2px 2px darkgreen;
   margin: 0;
+  cursor: default;
 }
 
 .add_workout_wrapper {
@@ -33,6 +40,7 @@
   color: whitesmoke;
   align-self: flex-start;
   margin: 0;
+  cursor: default;
 }
 
 .user_page_button {
@@ -94,23 +102,29 @@
 }
 
 .line_chart_wrapper {
-  width: 75%;
-  height: 400px;
-  margin-top: 30px;
+  width: 100%;
+  height: 460px;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 30px 90px 30px;
+  border-top: dotted 1px rgba(128, 128, 128, 0.5);
+  border-bottom: dotted 1px rgb(128, 128, 128, .5);
+}
+
+.line_chart_wrapper > label { 
+  margin-bottom: 10px;
+}
+
+.calendar_wrapper {
+  margin-top: 60px;
   margin-bottom: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.line_chart_wrapper > label, .calendar_wrapper > label {
-  color: whitesmoke;
-  text-shadow: 2px 2px grey;
-  font-size: var(--medium);
-}
-
-.calendar_wrapper > label {
-  margin-top: 30px;
+  width: 700px;
+  height: 500px;
 }
 
 @media (max-width:1400px) {
