--- a/code/frontend/src/styles/Navbar.module.css
+++ b/code/frontend/src/styles/Navbar.module.css
@@ -1,4 +1,9 @@
 .logout_button:hover {
+    border-color:rgba(70, 131, 180, 0.75) !important;
+    color:rgba(245, 245, 245, 0.75) !important;
+}
+
+.logout_button:active {
     border-color:rgba(70, 131, 180, 0.5) !important;
     color:rgba(245, 245, 245, 0.5) !important;
 }
