--- a/code/frontend/src/styles/AdminPage.module.css
+++ b/code/frontend/src/styles/AdminPage.module.css
@@ -115,7 +115,7 @@
   border-radius: 20px;
   padding: 10px;
   padding-top: 20px;
-  box-shadow: whitesmoke 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   margin-top: 10px;
 }
 
