--- a/code/frontend/src/styles/EditWorkoutModal.module.css
+++ b/code/frontend/src/styles/EditWorkoutModal.module.css
@@ -16,19 +16,20 @@
     align-self: flex-end;
     margin-top: 10px;
     margin-right: -20px;
-    border: solid 1px steelblue;
-    color: steelblue;
+    color: whitesmoke;
+    border: none;
     border-radius: 20px;
+    font-size: va;
 }
 
 .back_button:hover {
-    border: solid 1px rgba(70, 131, 180, 0.75);
-    color: rgba(70, 131, 180, 0.75);
+    border: none;
+    color: darkgray;
 }
 
 .back_button:active {
-    border: solid 1px rgba(70, 131, 180, 0.5) !important;
-    color: rgba(70, 131, 180, 0.5) !important;
+    border: none !important;
+    color: gray !important;
 }
 
 .header_date {
@@ -81,12 +82,12 @@
 
 .submit_button:hover {
     border: 1px solid rgba(70, 131, 180, 0.75);
-    color: rgba(245, 245, 245, 0.75);
+    color: steelblue;
 }
 
 .submit_button:active {
     border: 1px solid rgba(70, 131, 180, 0.5) !important;
-    color: rgba(245, 245, 245, 0.5) !important;
+    color: rgba(70, 131, 180, 0.75) !important;
 }
 
 .error_message {
